# CG

CGLabs/: computer graphics.sln
CGLabs/cglab-demo/: Program.cs  cglab-demo.csproj
info/: 5.4. Алгоритм, использующий z–буфер.html  5.5. Метод трассировки лучей (ray casting).html  5.6. Алгоритмы, использующие список приоритетов.html  5.7. Алгоритм Варнока (Warnock).html  Lect4_Афинные_преобр.htm  Lect5.htm  Lect6.htm  ex_box-3.htm  ex_box-4.htm
info/5.5. Метод трассировки лучей (ray casting)_files/: comp1011-1251.css
lab1/: .gitignore  CMakeLists.txt  GLWidget.cpp  GLWidget.hpp  Untitled.ipynb  bo.py  ex.py  main.cpp  mainwindow.ui
lab1/gui/: CMakeLists.txt  GLWidget.cpp  GLWidget.hpp  README.md  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  oglwidget.cpp  oglwidget.h  pointview.cpp  pointview.hpp
lab2/: CMakeLists.txt  GLWidget.cpp  GLWidget.hpp  mainwindow.cpp
lab2/gl/: Draw.cpp  GLWidget.cpp  GLWidget.hpp
lab2/matrix/: Matrix.hpp
lab2/point/: pointview.hpp
lab2/polygon/: Polygon.cpp  Polygon.hpp
lab2/src/: CMakeLists.txt
lab2/src/core/: CMakeLists.txt
lab2/src/core/matrix/: Matrix.cpp  Transform.cpp
lab2/src/core/polygon/: Polygon.cpp
lab2/src/core/vector/: Vector.h
lab2/src/gl/: Draw.cpp  GLWidget.cpp  GLWidget.hpp  Interface.cpp
lab2/src/gui/: CMakeLists.txt
lab2/src/gui/gl/: GLWidget.cpp  GLWidget.hpp  Interface.cpp
lab2/src/include/: Polygon.hpp
lab2/src/mainwindow/: mainwindow.cpp  mainwindow.hpp
lab2/src/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Transform.cpp  main.cpp
lab2/src/polygon/: CMakeLists.txt  Polygon.cpp  Polygon.hpp  main.cpp
lab2/src/ui/: mainwindow.ui
lab2/src/vector3i/: Vector3I.cpp  Vector3I.hpp
lab3/: CMakeLists.txt  README.md
lab3/src/: CMakeLists.txt
lab3/src/core/: CMakeLists.txt
lab3/src/core/figure/: CMakeLists.txt  Figure.cpp  Iter.cpp  cylinder.cpp
lab3/src/core/matrix/: CMakeLists.txt  Matrix.cpp  Transform.cpp
lab3/src/core/polygon/: CMakeLists.txt  Polygon.cpp
lab3/src/core/vector/: CMakeLists.txt  Vector.cpp  Vector2i.cpp  Vector3f.cpp  main.cpp
lab3/src/gl/: Draw.cpp  GLWidget.cpp  GLWidget.hpp  Interface.cpp
lab3/src/gui/: CMakeLists.txt
lab3/src/gui/angle/: AngleSpinBox.cpp  AngleSpinBox.hpp
lab3/src/gui/gl/: Draw.cpp  GLWidget.cpp  GLWidget.hpp  Interface.cpp  Shading.cpp
lab3/src/gui/win/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lab3/src/include/: Figure.hpp  Matrix.hpp  Polygon.hpp  Vector.hpp  config.hpp
lab3/src/mainwindow/: mainwindow.cpp
lab3/src/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Transform.cpp
lab3/src/polygon/: CMakeLists.txt  Polygon.cpp  main.cpp
lab3/src/vector/: Vector.cpp
trash/: main.cpp  planet  planet.cpp
